Extends Plates for CSS files retrieval which are stored on a CDN

--- a/src/WebAdmin/templates/admin/layout.phtml
+++ b/src/WebAdmin/templates/admin/layout.phtml
@@ -1,7 +1,7 @@
 <?php $this->layout('layout::default'); ?>
 
 <?php $this->push('stylesheets'); ?>
-	<link rel="stylesheet" type="text/css" href="/stylesheets/admin.css" />
+	<link rel="stylesheet" type="text/css" href="<?= $this->e($this->cssLocator('admin')); ?>" />
 <?php $this->end(); ?>
 
 
